# agentic-trading-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SKILLS.md  backtest_low_level.py  calculate_is.py  claude_api.py  cloud_loop_runner.py  cloud_loop_runner_demo.py  docker-compose.yml  execution_algorithm.py  load-data.py  main.py  prompt_builder.py  pyproject.toml  requirements.txt  trading_strategy.py
agent/: __init__.py  claude_api.py  loop_agent.py  prompt_builder.py
backtest_engine/: __init__.py  arrival_price.py  backtest_low_level.py  benchmarks.py  data_loader.py  databento_backtest.py  results.py
docs/: 00_START_HERE.md  AGENT_INTEGRATION_GUIDE.md  ARCHITECTURE.md  AWS_SETUP.md  AWS_SETUP_GUIDE.md  COMPLETION_REPORT.md  COST_MANAGEMENT.md  DATASET_ANALYSIS_REPORT.md  DATASET_PREPARATION_ANALYSIS.md  DATA_IMPLEMENTATION_SUMMARY.md  DATA_OPERATIONS_PLAYBOOK.md  DATA_QUICKSTART.md  DATA_RETRIEVAL_MVP_PLAN.md  DATA_STORAGE_CONTRACT.md  DATA_UPLOAD_AND_RETRIEVAL_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  OBJECTIVE.md  PROBLEM_DEFINITION.md  README_FOR_AGENTS.md  README_FOR_HUMANS.md  RETRIEVAL_SETUP.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WHY_SELECTIVE_PARTITIONING.md
execution_algos/: __init__.py
research/: NOTES.md  config.yaml  program_database.json
scripts/: README.md  data_retriever.py  deploy_lambda_layer.sh  generate_metadata.py  local-evaluator.py  prepare_dataset.py  retrieve_snapshot.py
strategies/: __init__.py
toy_example/: PROBLEM_DEFINITION.md  loader.py  run.py  (+1 more)
(+357 files in other folders)
