[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fsspec[http]>=2026.2.0",
    "nautilus-trader>=1.225.0",
    "requests>=2.33.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib",
    "python-dotenv",
]
