[project]
name = "agentic-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.94.1",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "fsspec[http]>=2026.2.0",
    "matplotlib>=3.10.8",
    "nautilus-trader>=1.225.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "requests>=2.32.3",
]